--- a/templates/courses/_fields.html
+++ b/templates/courses/_fields.html
@@ -1,18 +1,3 @@
-<div class="form-row">
-    <div class="form-group col-4">
-        {{ form.designation.label }}
-        {{ form.designation(class_="form-control") }}
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-4">
-        {{ form.name.label }}
-        {{ form.name(class_="form-control") }}
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-4">
-        {{ form.semester_id.label }}
-        {{ form.semester_id(class_="form-control") }}
-    </div>
-</div>
+{{ fm.field(form, 'designation') }}
+{{ fm.field(form, 'name') }}
+{{ fm.field(form, 'semester_id') }}
