--- a/templates/teams/add.html
+++ b/templates/teams/add.html
@@ -1,9 +1,11 @@
 {% extends 'main.html' %}
+{% import "form_macros.html" as fm %}
 
 {% block title %}Add a Team{% endblock %}
 
 {% block content %}
-    {% include "_form_errors.html" %}
+    <h1>Add a Team</h1>
+    {{ fm.error_header(form) }}
     <form method="POST">
         {{ form.csrf_token }}
         {% include "teams/_fields.html" %}
