--- a/templates/time/entry-bulk.html
+++ b/templates/time/entry-bulk.html
@@ -1,18 +1,14 @@
 {% extends 'main.html' %}
+{% import "form_macros.html" as fm %}
 
 {% block title %}Bulk Time Entry{% endblock %}
 
 {% block content %}
     <h1 class="my-2">Enter Time</h1>
-    {% include "_form_errors.html" %}
+    {{ fm.error_header(form) }}
     <form method="POST">
         {{ form.csrf_token }}
-        <div class="form-row">
-            <div class="form-group col-4">
-                {{ form.project_id.label }}
-                {{ form.project_id(class_="form-control") }}
-            </div>
-        </div>
+        {{ fm.field(form, 'project_id') }}
 
         {# Headings #}
         <div class="form-row">
@@ -21,17 +17,21 @@
             <div class="col-7">Description</div>
         </div>
 
+        {# Entries #}
         {% for idx in range(entry_count) %}
-            <div class="form-row">
+            <div class="form-row my-2">
                 <div class="col-3">
-                    <input class="form-control" id="date-{{ idx }}" name="date-{{ idx }}" type="date" value>
+                    <input class="form-control" id="date-{{ idx }}" name="date-{{ idx }}"
+                           type="date" value>
                 </div>
                 <div class="col-2">
                     <input class="form-control" id="duration-{{ idx }}" name="duration-{{ idx }}"
-                           placeholder="e.g. 1.75" type="text" value=>
+                           {% if loop.first %}placeholder="e.g. 1.75"{% endif %}
+                           type="text" value>
                 </div>
                 <div class="col-7">
-                    <input class="form-control" id="description-{{ idx }}" name="description-{{ idx }}" type="text" value>
+                    <input class="form-control" id="description-{{ idx }}" name="description-{{ idx }}"
+                           type="text" value>
                 </div>
             </div>
         {% endfor %}
